--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,18 @@
+certifi==2018.1.18
+chardet==3.0.4
+coreapi==2.3.3
+coreschema==0.0.4
 Django==1.11.5
+djangorestframework==3.7.3
+idna==2.6
+itypes==1.1.0
+Jinja2==2.10
+MarkupSafe==1.0
 PyMySQL==0.7.11
+pytz==2017.3
 rdbtools==0.1.11
 redis==2.10.6
 requests==2.18.4
+uritemplate==3.0.0
+urllib3==1.22
 virtualenv==15.1.0
